1999-11-27  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_STDCPP_LIBRARY: drop check for math lib

	* AcSplit/CF_GPP_LIBRARY:
	drop check for math lib, since it's not really needed

	* AcSplit/CF_SRC_MODULES:
	tweaks to let me drop Ada95 directory by checking directly for enclosed makefile

1999-11-18  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_XOPEN_CURSES:
	put the definition in $CFLAGS since we want to ensure it happens right
	at the beginning of the compile

1999-11-11  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_TERMCAP_LIBS:
	rewrote (for vile 8.4b) to use AC_TRY_LINK throughout so I avoid the
	broken linker on FreeBSD

	* AcSplit/CF_ADD_CFLAGS: RCS_BASE

	* AcSplit/CF_CRYPT_FUNC: ci-aclocal generated header

	* AcSplit/CF_CRYPT_FUNC:
	nit - forgot to reset $LIBS in the second test.

1999-11-10  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_CRYPT_FUNC: RCS_BASE

	* AcSplit/CF_TERMCAP_LIBS:
	don't bother looking for termcap functions in libcurses on FreeBSD

	* AcSplit/CF_PROG_PERL: trim trailing blanks

1999-10-30  Thomas E. Dickey  <dickey@clark.net>

	* config.guess: add powerpc-apple

1999-10-28  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_UTMP_UT_SESSION: RCS_BASE

	* AcSplit/CF_UTMP: add CF_UTMP_UT_SESSION
	also, add definition for ut_name to ut_user

	* AcSplit/CF_UTMP_UT_XTIME:
	beyond existence check for ut_xtime, add check for missing #define

	* AcSplit/CF_LASTLOG: comments

1999-10-24  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_LIB_RULES: add uninstall.data and uninstall.man rules

	* AcSplit/CF_STDCPP_LIBRARY:
	limit this to checking for variants of g++ (skip vendor's c++)

	* AcSplit/CF_LIB_SUFFIX:
	modify for netbsd: the suffix may be simply ".so", or ".so.$(REL_VERSION)",
	depending on whether ld.elf_so is present

	* AcSplit/CF_LINK_FUNCS:
	oops - forgot to #define HAVE_LINK and HAVE_SYMLINK

	* AcSplit/CF_GCC_WARNINGS: put the compiler name into the messages
	(may not be 'gcc')
