@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t19991127
+MANIFEST for my-autoconf, version t19991212
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 config.guess                    autoconf's config.guess
